--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -213,14 +213,14 @@ header nav .nav-register a {
   background:
     radial-gradient(
       circle at 50% 96%,
-      rgba(0, 255, 95, 1) 0%,
-      rgba(0, 166, 62, 0) 100%
+      rgba(0, 200, 70, 0.5) 0%,
+      rgba(0, 130, 48, 0) 100%
     ),
     radial-gradient(
       circle at 50% 100%,
-      rgba(72, 214, 67, 1) 1%,
-      rgba(66, 175, 96, 1) 58%,
-      rgba(49, 187, 104, 1) 100%
+      rgba(0, 140, 50, 1) 1%,
+      rgba(0, 110, 40, 1) 58%,
+      rgba(0, 90, 33, 1) 100%
     );
   border: 1px solid rgba(255, 255, 255, 0.57);
 }
@@ -241,14 +241,14 @@ header nav .nav-active a {
   background:
     radial-gradient(
       circle at 50% 96%,
-      rgba(0, 255, 95, 1) 0%,
-      rgba(0, 166, 62, 0) 100%
+      rgba(0, 200, 70, 0.5) 0%,
+      rgba(0, 130, 48, 0) 100%
     ),
     radial-gradient(
       circle at 50% 100%,
-      rgba(72, 214, 67, 1) 1%,
-      rgba(66, 175, 96, 1) 58%,
-      rgba(49, 187, 104, 1) 100%
+      rgba(0, 140, 50, 1) 1%,
+      rgba(0, 110, 40, 1) 58%,
+      rgba(0, 90, 33, 1) 100%
     );
   border: 1px solid rgba(255, 255, 255, 0.57);
   border-radius: var(--border-radius);
